# Laser-setup

./: Cargo.toml  README.md  TODO.md  build.rs
.cargo/: config.toml
.gitea/workflows/: ci.yaml  push-request.yaml
src/: config.rs  main.rs  protobuf_server.rs  shift.rs
src/hw/f103/: clock_config_48.rs  mod.rs
src/protobuf/: ProtobufDevice_0000E007.proto  ProtobufDevice_0000E008.proto  encode_md_message.rs  md.rs  message_body.rs  messages.rs  mod.rs  process_control.rs  process_requiest.rs
src/support/: mod.rs
