[package]
authors = ["ololoshka2871"]
edition = "2018"
readme = "README.md"
name = "laser-setup"
version = "0.4.3"
resolver = "2"

[dependencies]
num = { version = "0.4", default-features = false }
libm = "0.2.5"
vcell = "0.1.3"
nb = "1.1.0"
umm-malloc = { version = "0.3.2", features = ["cortex-m-interrupt-critical-section"] }

embedded-hal = { version = "0.2.4", features = ["unproven"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

usb-device = { version = "0.2.9", features = ["defmt"] }
stm32-usbd = "0.6.0"
usbd-serial = "0.1.1"

panic-probe = { version = "0.3", features = ["print-defmt"] }

stm32f1xx-hal = { version = "0.9.0", features = ["rt"], optional = true }
i2c_hung_fix = "0.1"

cortex-m-rtic = { version = "1.1" }
systick-monotonic = "1.0.1"

prost = { version = "0.11", default-features = false, features = ["prost-derive"] }

# defmt
defmt = "0.3"
defmt-macros = "0.3"
defmt-rtt = "0.4"

[build-dependencies]
prost-build = "0.11"

[profile.dev.package."*"]
opt-level = "z"

[profile.dev]
opt-level = "z"
codegen-units = 1 # better optimizations
debug = 2
lto = false
panic = "abort"
debug-assertions = true

[profile.release]
opt-level = "s"
codegen-units = 1 # better optimizations
debug = 2 # добавлять отладочные символы. Не влияет на размер исполняемого кода, зато работает дебаг
panic = 'abort'
lto = true

[features]
default = [
  "stm32f103b",
]

stm32f103b = ["stm32f103"]
stm32f103 = ["stm32f1xx-hal/stm32f103", "stm32f1xx-hal/medium"] # косяк либы, для f103 не включена поддержка таймера 4